Fix mobile navigation too tall

--- a/static/style.css
+++ b/static/style.css
@@ -48,6 +48,11 @@
   margin-right: 0 !important;
 }
 
+.mobile-navigation.ui.dropdown .menu .item {
+  padding-top: 0.4rem !important;
+  padding-bottom: 0.4rem !important;
+}
+
 .toc {
   position: fixed;
   top: -1.1em;
